// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render with data 1`] = `
<div
  className="letstalk-button-container"
>
  <input
    className="letstalk-button my-custom-button-class"
    disabled={true}
    onClick={[Function]}
    type="button"
    value="custom"
  />
</div>
`;

exports[`Button component should render with minimal props 1`] = `
<div
  className="letstalk-button-container"
>
  <input
    className="letstalk-button"
    disabled={false}
    onClick={[Function]}
    type="submit"
    value="submit"
  />
</div>
`;
